<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type" />

        <Spinner
            style="@style/ComboBox"
            android:id="@+id/SType"
            android:layout_width="match_parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/controls_layer" />

        <Spinner
            style="@style/ComboBox"
            android:id="@+id/SControlLayer"
            android:layout_width="match_parent" />

        <LinearLayout
            android:id="@+id/LLLayerAction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/controls_layer_action" />

            <Spinner
                style="@style/ComboBox"
                android:id="@+id/SLayerAction"
                android:layout_width="match_parent" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LLShape"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shape" />

            <Spinner
                style="@style/ComboBox"
                android:id="@+id/SShape"
                android:layout_width="match_parent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/scale"/>

            <TextView
                android:id="@+id/TVScale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <SeekBar
            android:id="@+id/SBScale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:min="50"
            android:max="150" />

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/touch_hitbox_scale" />
        <SeekBar android:id="@+id/SBHitboxScale" android:layout_width="match_parent" android:layout_height="wrap_content" android:min="100" android:max="300" />

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/idle_opacity" />
        <SeekBar android:id="@+id/SBIdleOpacity" android:layout_width="match_parent" android:layout_height="wrap_content" android:max="100" />

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/active_opacity" />
        <SeekBar android:id="@+id/SBActiveOpacity" android:layout_width="match_parent" android:layout_height="wrap_content" android:max="100" />

        <CheckBox android:id="@+id/CBEditorLocked" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lock_position" />

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/expandable_group" />
        <Spinner style="@style/ComboBox" android:id="@+id/SExpandGroup" android:layout_width="match_parent" />

        <LinearLayout android:id="@+id/LLExpandAction" android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/expandable_action" />
            <Spinner style="@style/ComboBox" android:id="@+id/SExpandAction" android:layout_width="match_parent" />
        </LinearLayout>

        <LinearLayout android:id="@+id/LLStickOptions" android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/stick_mode" />
            <Spinner style="@style/ComboBox" android:id="@+id/SStickMode" android:layout_width="match_parent" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dead_zone" />
            <SeekBar android:id="@+id/SBDeadZone" android:layout_width="match_parent" android:layout_height="wrap_content" android:max="90" />
        </LinearLayout>

        <LinearLayout android:id="@+id/LLMouseOptions" android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/mouse_area_mode" />
            <Spinner style="@style/ComboBox" android:id="@+id/SMouseMode" android:layout_width="match_parent" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/mouse_sensitivity" />
            <SeekBar android:id="@+id/SBMouseSensitivity" android:layout_width="match_parent" android:layout_height="wrap_content" android:min="10" android:max="500" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/width" />
            <SeekBar android:id="@+id/SBMouseWidth" android:layout_width="match_parent" android:layout_height="wrap_content" android:min="25" android:max="400" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/height" />
            <SeekBar android:id="@+id/SBMouseHeight" android:layout_width="match_parent" android:layout_height="wrap_content" android:min="25" android:max="400" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LLRangeOptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/range" />

            <Spinner
                style="@style/ComboBox"
                android:id="@+id/SRange"
                android:layout_width="match_parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/orientation" />

            <RadioGroup
                android:id="@+id/RGOrientation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/RBHorizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/horizontal" />

                <RadioButton
                    android:id="@+id/RBVertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vertical" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/columns" />

            <com.winlator.widget.NumberPicker
                android:id="@+id/NPColumns"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:minValue="3"
                app:maxValue="8" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LLBindings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

        <LinearLayout
            android:id="@+id/LLDPadBindings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/binding_up" />

            <Spinner
                style="@style/ComboBox"
                android:id="@+id/SBindingUp"
                android:layout_width="match_parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/binding_right" />

            <Spinner
                style="@style/ComboBox"
                android:id="@+id/SBindingRight"
                android:layout_width="match_parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/binding_down" />

            <Spinner
                style="@style/ComboBox"
                android:id="@+id/SBindingDown"
                android:layout_width="match_parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/binding_left" />

            <Spinner
                style="@style/ComboBox"
                android:id="@+id/SBindingLeft"
                android:layout_width="match_parent" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/CBToggleSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toggle_switch" />

        <LinearLayout
            android:id="@+id/LLCustomTextIcon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/custom_text" />

            <EditText
                style="@style/EditText"
                android:id="@+id/ETCustomText"
                android:maxLength="8"
                android:layout_width="match_parent"
                android:hint="@string/none"
                android:inputType="textCapCharacters" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/icon" />

            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/icon_scale" />
            <SeekBar android:id="@+id/SBIconScale" android:layout_width="match_parent" android:layout_height="wrap_content" android:min="50" android:max="150" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp">

                <LinearLayout
                    android:id="@+id/LLIconList"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" />
            </HorizontalScrollView>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
